--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 98b8860
+	base = 8a181f9
 	trimbase = 
 	parent = release/hydro/libpointmatcher
-	previous = 
+	previous = 98b8860
