--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 786bba5
+	base = 42104f8
 	trimbase = 
 	parent = debian/hydro/libpointmatcher
-	previous = 
+	previous = 786bba5
