--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <package>
 	<name>libpointmatcher</name>
-	<version>1.2.0</version>
+	<version>1.2.1</version>
 	<description>
 		libpointmatcher is a modular ICP library, useful for robotics and computer vision.
 	</description>
@@ -22,6 +22,6 @@
 	<run_depend>catkin</run_depend>
 
 	<export>
-		<build_type>catkin</build_type>
+		<build_type>cmake</build_type>
 	</export>
 </package>
