--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8e1e30b
+	base = 2d3b707
 	trimbase = 
 	parent = debian/indigo/libpointmatcher
-	previous = 
+	previous = 8e1e30b
