--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0e54ef6
+	base = 1e5e800
 	trimbase = 
 	parent = release/indigo/libpointmatcher
-	previous = 
+	previous = 0e54ef6
