--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9b6920e
+	base = 84597b1
 	trimbase = 
 	parent = rpm/indigo/libpointmatcher
-	previous = 
+	previous = 9b6920e
