--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 313e65e
+	base = e9d9802
 	trimbase = 
 	parent = release/hydro/libpointmatcher
-	previous = 
+	previous = 313e65e
