--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fde6db2
+	base = ff6a326
 	trimbase = 
 	parent = rpm/hydro/libpointmatcher
-	previous = 
+	previous = fde6db2
