Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.2.1-0": ["Fri Jul 25 2014", "Francois Pomerleau", "f.pomerleau@gmail.com"]}
+{"1.2.2-0": ["Tue Aug 05 2014", "Francois Pomerleau", "f.pomerleau@gmail.com"], "1.2.1-0": ["Fri Jul 25 2014", "Francois Pomerleau", "f.pomerleau@gmail.com"]}
