--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d9140da
+	base = 54640a5
 	trimbase = 
 	parent = rpm/indigo/libpointmatcher
-	previous = 
+	previous = d9140da
